feat: add 'about us' page

--- a/components/footer.html
+++ b/components/footer.html
@@ -33,7 +33,9 @@
         <a href="blog.html">
           <p>Блог</p>
         </a>
-        <p>Про нас</p>
+        <a href="about-us.html">
+          <p>Про нас</p>
+        </a>
         <a href="contacts.html">
           <p>Контакти</p>
         </a>
@@ -82,7 +84,9 @@
       <a href="blog.html">
         <p>Блог</p>
       </a>
-      <p>Про нас</p>
+      <a href="about-us.html">
+        <p>Про нас</p>
+      </a>
       <a href="contacts.html">
         <p>Контакти</p>
       </a>
