--- a/components/header.html
+++ b/components/header.html
@@ -24,7 +24,7 @@
         </a>
       </li>
       <li><a href="blog.html">Блог</a></li>
-      <li><a href="about.html">Про нас</a></li>
+      <li><a href="about-us.html">Про нас</a></li>
       <li><a href="contacts.html">Контакти</a></li>
     </ul>
   </nav>
@@ -102,7 +102,7 @@
     <span>Автовикуп після ДТП</span>
     <span class="menu-item" data-target="cities">Міста</span>
     <a href="blog.html"><span>Блог</span></a>
-    <a><span>Про нас</span></a>
+    <a href="about-us.html"><span>Про нас</span></a>
     <a href="contacts.html"><span>Контакти</span></a>
   </div>
 
